# reqsink

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yml  create_release.yml
examples/: example-routes.json  robots.txt.html
src/: main.rs  raw.rs  serve.rs
templates/: admin.html
