[package]
name = "reqsink"
version = "0.1.0"
authors = ["Alex Tomic <atomic777@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "0.7"
tera = "1"
serde = "1.0.118"
serde_derive = "1.0.118"
serde_json = "1.0.61"
chrono = "0.4.19"
url = "2.2.0"
clap = "3.0.0-beta.2"
bincode = "1.3"
snap = "1"
rusqlite = {version = "0.24.2", features = ["bundled"]}
rust-embed = "5.8.0"