[package]
name = "reqsink"
version = "0.3.1"
authors = ["Alex Tomic <atomic777@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "^0.9"
tera = "^1.15"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
chrono = "^0.4"
url = "^2.2"
clap = {version = "^3.0.0-rc.9", features = ["derive"]}
bincode = "^1.3"
snap = "^1"
rusqlite = {version = "0.24", features = ["bundled"]}
rust-embed = "5"
log = "^0.4"
env_logger = "^0.9"
