[package]
name = "reqsink"
version = "0.4.1"
description = "A lightweight but flexible sink for requests"
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tiny_http = "^0.12"
tera = "^1.19"
serde = "^1"
serde_derive = "^1"
serde_json = "^1"
chrono = "^0.4"
url = "^2.2"
clap = {version = "^3.2", features = ["derive"]}
bincode = "^1.3"
snap = "^1"
rusqlite = {version = "0.24", features = ["bundled"]}
rust-embed = "5"
log = "^0.4"
env_logger = "^0.9"
flate2 = { version = "=1.0.26", features = [] }
